[package]
name = "elma"
version = "0.1.15-alpha.0"
edition = "2021"
authors = ["Roger Andersen <hexjelly@hexjelly.com>"]
description = "Library for reading and writing Elasto Mania files."
homepage = "https://github.com/elmadev/elma-rust"
repository = "https://github.com/elmadev/elma-rust"
documentation = "https://docs.rs/elma/"
readme = "README.md"
keywords = ["ElastoMania", "Elma"]
license = "MIT"

[dependencies]
byteorder = "1.5.0"
itertools = "0.13"
nom = "7.1.3"
rand = "0.8.5"
